--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_svg:
   carousel_slider:
+  flutter_flip_card:
   linear_progress_bar:
   provider:
 
